[package]
name = "yap"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.6", features = ["derive"] }
annotate-snippets = "0.12"

tree-sitter = "0.26"
tree-sitter-yap = "0.1"

cranelift = "0.131"
target-lexicon = "0.13"

lsp-server = "0.7"
lsp-types = "0.97"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[patch.crates-io]
tree-sitter-yap = { path = "../tree-sitter-yap" }
